# StabilizerCPP

./: .gitignore  .travis.yml  CMakeLists.txt
Interfaces/mex/: mex_random_stabilizer.cpp  mex_random_states.cpp  recompile_mex.m
src/: CMakeLists.txt  PauliMatrices.cpp  StabilizerGroup.cpp  StabilizerGroup.h  StabilizerMatrix.cpp  StabilizerMatrix.h  SymplecticPauli.cpp  SymplecticPauli.h  generation.cpp  main.cpp  orthogonalisation.cpp  utils.cpp
src/lib/: PauliMatrices.h  StabilizerGroup.h  StabilizerMatrix.h  SymplecticPauli.h  generation.h  orthogonalisation.h  utils.h
test/: CMakeLists.txt
test/tests/: CMakeLists.txt  TestGroupGeneration.cpp  basicCheck.cpp  test_GroupGeneration.cpp  test_StabilizerGroup.cpp  test_StabilizerMatrix.cpp  test_SymplecticPauli.cpp
test/tests/fixtures/: 2qtest.generators  full_save_load.generators  full_save_load.states  single_test.generators
